# internet-

./: .gitignore  Cargo.toml  README.md  requirements.txt
apps/desktop/: Cargo.toml  build.rs  package.json  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/src/: lib.rs  llm_alert_story.rs  main.rs
crates/app_core/: Cargo.toml
crates/app_core/examples/: native_health_foreground_smoke.rs  native_process_foreground_smoke.rs  native_service_foreground_smoke.rs  rdp_operational_foreground_smoke.rs  smb_operational_foreground_smoke.rs
crates/app_core/src/: authorized_native_permissions.rs  baseline_read_models.rs  canonical_read_models.rs  demo_story.rs  endpoint_threat_runtime.rs  etw_lifecycle.rs  etw_probe.rs  event_streams.rs  evidence_quality.rs  explicit_session_export.rs  investigation_drill_down.rs  lib.rs  llm_alert_story.rs  machine_local_capabilities.rs  mutation_authorization.rs  mutation_commands.rs  native_sampler_readiness.rs  native_sampler_runtime.rs  native_scheduler.rs  native_scheduler_host.rs  portable_capture_import.rs  portable_proxy_metadata_provider.rs  portable_source_readers.rs  read_commands.rs  reference_navigation.rs  runtime_architecture.rs  runtime_container.rs  vertical_slices.rs
crates/capabilities/: Cargo.toml
crates/capabilities/src/: asset_exposure.rs  c2_detection.rs  continuous_metadata_watch.rs  endpoint_threat_detection.rs  evidence_management.rs  exfiltration_detection.rs  export_history.rs  graph_analytics.rs  graph_stage.rs  lateral_movement_lite.rs  lib.rs  local_proxy_metadata_provider.rs  mock_network_pipeline.rs  multi_layer_fusion.rs  native_network_fact.rs  native_sampler_runtime.rs  network_observations.rs  portable_capture_lite.rs  portable_network_web.rs  report_generation.rs  response_execution.rs  response_planning.rs  risk_alerting.rs  runtime_boundary_tests.rs  runtime_test_support.rs  static_plugin_runtime.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: caller_verification.rs  etw_lifecycle.rs  etw_network.rs  etw_probe.rs  ip_helper_schedule.rs  lib.rs  mutation_authorization.rs  native_network.rs  provider_controller.rs  read_commands.rs  session_export.rs
crates/contracts/src/baseline/: mod.rs
crates/contracts/src/common/: entity.rs  envelope.rs  error.rs  ids.rs  mod.rs  pagination.rs  privacy.rs  quality.rs  query.rs  schema.rs  time.rs  trace.rs
crates/contracts/src/endpoint_threat/: mod.rs
crates/contracts/src/evidence_quality/: mod.rs
crates/contracts/src/fusion/: mod.rs
crates/contracts/src/graph/: mod.rs
crates/contracts/src/identity/: mod.rs
crates/contracts/src/intelligence/: mod.rs
crates/contracts/src/investigation/: mod.rs
crates/contracts/src/native_permission/: mod.rs
crates/contracts/src/native_sampler/: mod.rs
crates/contracts/src/native_scheduler/: mod.rs
crates/contracts/src/navigation/: mod.rs
crates/contracts/src/network/: mod.rs
crates/contracts/src/plugin/: mod.rs
crates/contracts/src/read_model_snapshot/: mod.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: api_gateway_provider_client.rs  cdn_edge_provider_client.rs  intelligence.rs  lib.rs  object_storage_audit_client.rs  provider_adapter.rs  service_ipc.rs
crates/infrastructure/src/windows/: etw_network.rs  etw_probe.rs  etw_session.rs  event_log_auth_remote.rs  event_log_rdp_operational.rs  event_log_smb_operational.rs  event_log_ssh_operational.rs  ip_helper.rs  mod.rs  native_health.rs  native_service.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  runtime_architecture_tests.rs
crates/platform/src/component/: mod.rs
crates/platform/src/event_bus/: bus.rs  dead_letter.rs  message.rs  mod.rs  subscription.rs  topic.rs
crates/platform/src/observability/: audit.rs  diagnostics.rs  health.rs  metrics.rs  mod.rs  tests.rs
crates/platform/src/permissions/: mod.rs
crates/platform/src/pipeline/: backpressure.rs  checkpoint.rs  dag.rs  mod.rs  replay.rs  scheduler.rs  stage.rs  tests.rs
crates/platform/src/plugin_runtime/: context.rs  mock_catalog.rs  mod.rs  policy.rs  registry.rs  runtime.rs  tests.rs  traits.rs
crates/platform/src/registry/: mod.rs
crates/platform/src/resolver/: mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  ids.rs  lib.rs  migration.rs  portable_preferences.rs  privacy.rs  privacy_service.rs  runtime.rs  session.rs  settings.rs  store.rs
fixtures/mock/: fixture_attack_story.json
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
frontend/src/: main.tsx  styles.css  styles.interactions.test.ts
frontend/src/app/: App.tsx  navigation.test.ts  navigation.ts  router.test.tsx  router.tsx
frontend/src/bridge/: detachedPaneSnapshots.test.ts  detachedPaneSnapshots.ts  detachedWindows.test.ts  detachedWindows.ts  eventHandlers.ts  events.test.ts  index.ts  lifecycle.ts  mutations.test.ts  mutations.ts  queryKeys.ts  readCommands.test.ts  readCommands.ts
frontend/src/features/: hooks.test.ts
frontend/src/shared/: designTokens.test.ts  designTokens.ts  useInteractionStates.ts  useReducedMotion.ts
frontend/src/stores/: navigationStore.ts  notificationStore.ts  selectionStore.ts  streamStore.ts  uiStore.test.ts  uiStore.ts
scripts/: etw_network_smoke.ps1  ip_helper_scheduler_smoke.ps1  native_demo_smoke.ps1  native_detach_smoke.ps1  native_health_sensing_smoke.ps1  native_process_sensing_smoke.ps1  native_service_sensing_smoke.ps1  release_smoke.ps1  windows_auth_remote_sensing_smoke.ps1  windows_dns_sensing_smoke.ps1  windows_rdp_operational_sensing_smoke.ps1  windows_smb_operational_sensing_smoke.ps1
service/elevated/: Cargo.toml
service/elevated/src/: attribution.rs  capture.rs  ipc.rs  lib.rs  main.rs  runtime_ipc.rs  security.rs  service_host.rs
service/elevated/tests/: runtime_boundary.rs
(+148 files in other folders)
