[workspace]
members = [
    "apps/desktop",
    "crates/contracts",
    "crates/storage",
    "crates/platform",
    "crates/infrastructure",
    "crates/capabilities",
    "crates/app_core",
    "service/elevated",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
version = "0.1.0"

[workspace.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Services",
] }
