[package]
name = "sentinel-infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sentinel_infrastructure"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
sentinel-contracts = { path = "../contracts" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_EventLog",
    "Win32_System_LibraryLoader",
    "Win32_System_Services",
    "Win32_System_SystemInformation",
    "Win32_System_Time",
] }
