[package]
name = "sentinel-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sentinel_storage"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
sentinel-contracts = { path = "../contracts" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
windows-sys.workspace = true
